updated config, bibliography, teaching

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,68 +3,357 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+
+
+@inproceedings{DBLP:conf/aied/Sankaranarayanan20,
+  author    = {Sreecharan Sankaranarayanan and
+               Siddharth Reddy Kandimalla and
+               Sahil Hasan and
+               Haokang An and
+               Christopher Bogart and
+               R. Charles Murray and
+               Michael Hilton and
+               Majd Sakr and
+               Carolyn Penstein Ros{\'{e}}},
+  editor    = {Ig Ibert Bittencourt and
+               Mutlu Cukurova and
+               Kasia Muldner and
+               Rose Luckin and
+               Eva Mill{\'{a}}n},
+  title     = {Agent-in-the-Loop: Conversational Agent Support in Service of Reflection
+               for Learning During Collaborative Programming},
+  booktitle = {Artificial Intelligence in Education - 21st International Conference,
+               {AIED} 2020, Ifrane, Morocco, July 6-10, 2020, Proceedings, Part {II}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12164},
+  abbr      = {AIED},
+  pages     = {273--278},
+  publisher = {Springer},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/978-3-030-52240-7\_50},
+  doi       = {10.1007/978-3-030-52240-7\_50},
+  timestamp = {Tue, 07 Jul 2020 13:16:43 +0200},
+  biburl    = {https://dblp.org/rec/conf/aied/Sankaranarayanan20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{DBLP:conf/icsm/KolakAGHT20,
+  author    = {Sophia Kolak and
+               Afsoon Afzal and
+               Claire Le Goues and
+               Michael Hilton and
+               Christopher Steven Timperley},
+  title     = {It Takes a Village to Build a Robot: An Empirical Study of The {ROS}
+               Ecosystem},
+  abbr      = {ICSME},
+  booktitle = {{IEEE} International Conference on Software Maintenance and Evolution,
+               {ICSME} 2020, Adelaide, Australia, September 28 - October 2, 2020},
+  pages     = {430--440},
+  publisher = {{IEEE}},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/ICSME46990.2020.00048},
+  doi       = {10.1109/ICSME46990.2020.00048},
+  timestamp = {Tue, 10 Nov 2020 09:29:46 +0100},
+  biburl    = {https://dblp.org/rec/conf/icsm/KolakAGHT20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{DBLP:conf/icst/AfzalGHT20,
+  author    = {Afsoon Afzal and
+               Claire Le Goues and
+               Michael Hilton and
+               Christopher Steven Timperley},
+  title     = {A Study on Challenges of Testing Robotic Systems},
+  booktitle = {13th {IEEE} International Conference on Software Testing, Validation
+               and Verification, {ICST} 2020, Porto, Portugal, October 24-28, 2020},
+  abbr      = {ICST},
+  pages     = {96--107},
+  publisher = {{IEEE}},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/ICST46399.2020.00020},
+  doi       = {10.1109/ICST46399.2020.00020},
+  timestamp = {Wed, 12 Aug 2020 12:59:51 +0200},
+  biburl    = {https://dblp.org/rec/conf/icst/AfzalGHT20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{DBLP:conf/sigsoft/WidderHKV19,
+  author    = {David Gray Widder and
+               Michael Hilton and
+               Christian K{\"{a}}stner and
+               Bogdan Vasilescu},
+  editor    = {Marlon Dumas and
+               Dietmar Pfahl and
+               Sven Apel and
+               Alessandra Russo},
+  title     = {A conceptual replication of continuous integration pain points in
+               the context of Travis {CI}},
+  abbr      = {FSE},
+  booktitle = {Proceedings of the {ACM} Joint Meeting on European Software Engineering
+               Conference and Symposium on the Foundations of Software Engineering,
+               {ESEC/SIGSOFT} {FSE} 2019, Tallinn, Estonia, August 26-30, 2019},
+  pages     = {647--658},
+  publisher = {{ACM}},
+  year      = {2019},
+  url       = {https://doi.org/10.1145/3338906.3338922},
+  doi       = {10.1145/3338906.3338922},
+  timestamp = {Sun, 25 Oct 2020 23:14:01 +0100},
+  biburl    = {https://dblp.org/rec/conf/sigsoft/WidderHKV19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@inproceedings{DBLP:conf/msr/DurieuxGHA20,
+  author    = {Thomas Durieux and
+               Claire Le Goues and
+               Michael Hilton and
+               Rui Abreu},
+  editor    = {Sunghun Kim and
+               Georgios Gousios and
+               Sarah Nadi and
+               Joseph Hejderup},
+  abbr      = {MSR},
+  title     = {Empirical Study of Restarted and Flaky Builds on Travis {CI}},
+  booktitle = {{MSR} '20: 17th International Conference on Mining Software Repositories,
+               Seoul, Republic of Korea, 29-30 June, 2020},
+  pages     = {254--264},
+  publisher = {{ACM}},
+  year      = {2020},
+  url       = {https://doi.org/10.1145/3379597.3387460},
+  doi       = {10.1145/3379597.3387460},
+  timestamp = {Thu, 24 Sep 2020 10:48:37 +0200},
+  biburl    = {https://dblp.org/rec/conf/msr/DurieuxGHA20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+
+@inproceedings{DBLP:conf/aied/Sankaranarayanan19,
+  author    = {Sreecharan Sankaranarayanan and
+               Xu Wang and
+               Cameron Dashti and
+               Marshall An and
+               Clarence Ngoh and
+               Michael Hilton and
+               Majd Sakr and
+               Carolyn Penstein Ros{\'{e}}},
+  editor    = {Seiji Isotani and
+               Eva Mill{\'{a}}n and
+               Amy Ogan and
+               Peter M. Hastings and
+               Bruce M. McLaren and
+               Rose Luckin},
+  title     = {An Intelligent-Agent Facilitated Scaffold for Fostering Reflection
+               in a Team-Based Project Course},
+  booktitle = {Artificial Intelligence in Education - 20th International Conference,
+               {AIED} 2019, Chicago, IL, USA, June 25-29, 2019, Proceedings, Part
+               {II}},
+  abbr      = {AIED},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {11626},
+  pages     = {252--256},
+  publisher = {Springer},
+  year      = {2019},
+  url       = {https://doi.org/10.1007/978-3-030-23207-8\_47},
+  doi       = {10.1007/978-3-030-23207-8\_47},
+  timestamp = {Fri, 18 Oct 2019 12:58:35 +0200},
+  biburl    = {https://dblp.org/rec/conf/aied/Sankaranarayanan19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/msr/WidderHKV18,
+  author    = {David Gray Widder and
+               Michael Hilton and
+               Christian K{\"{a}}stner and
+               Bogdan Vasilescu},
+  title     = {I'm leaving you, Travis: a continuous integration breakup story},
+  booktitle = {Proceedings of the 15th International Conference on Mining Software
+               Repositories, {MSR} 2018, Gothenburg, Sweden, May 28-29, 2018},
+  pages     = {165--169},
+  year      = {2018},
+  abbr      = {MSR},
+  url       = {http://www.cs.cmu.edu/~mhilton/docs/msr18ci.pdf},
+  doi       = {10.1145/3196398.3196422},
+  timestamp = {Mon, 07 Jan 2019 17:17:42 +0100}
+}
+
+@inproceedings{DBLP:conf/icse/NguyenNDNTH19,
+  author    = {Hoan Anh Nguyen and
+               Tien N. Nguyen and
+               Danny Dig and
+               Son Nguyen and
+               Hieu Tran and
+               Michael Hilton},
+  title     = {Graph-based mining of in-the-wild, fine-grained, semantic code change
+               patterns},
+  abbr      = {ICSE},
+  booktitle = {Proceedings of the 41st International Conference on Software Engineering,
+               {ICSE} 2019, Montreal, QC, Canada, May 25-31, 2019},
+  pages     = {819--830},
+  year      = {2019},
+  url       = {https://dl.acm.org/citation.cfm?id=3339608},
+  timestamp = {Fri, 07 Jun 2019 11:05:40 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/icse/NguyenNDNTH19},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{Hilton0M18,
+  title     = {A large-scale study of test coverage evolution},
+  author    = {Michael Hilton and Jonathan Bell and Darko Marinov},
+  booktitle = {Proceedings of the 33rd {ACM/IEEE} International Conference on Automated Software Engineering, {ASE} 2018, Montpellier, France, September 3-7, 2018},
+  year      = {2018},
+  abbr      = {ASE},
+  url       = {http://www.cs.cmu.edu/~mhilton/docs/ase18coverage.pdf}
+}
+
+
+@inproceedings{DBLP:conf/icse/HiltonB18,
+  author    = {Michael Hilton and
+               Andrew Begel},
+  title     = {A study of the organizational dynamics of software teams},
+  booktitle = {Proceedings of the 40th International Conference on Software Engineering:
+               Software Engineering in Practice, {ICSE} {(SEIP)} 2018, Gothenburg,
+               Sweden, May 27 - June 03, 2018},
+  pages     = {191--200},
+  year      = {2018},
+  abbr      = {ICSE SEIP},
+  url       = {http://www.cs.cmu.edu/~mhilton/docs/p191-hilton.pdf},
+  doi       = {10.1145/3183519.3183527},
+  timestamp = {Wed, 21 Nov 2018 12:44:00 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/icse/HiltonB18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icse/BellLHEYM18,
+  author    = {Jonathan Bell and
+               Owolabi Legunsen and
+               Michael Hilton and
+               Lamyaa Eloussi and
+               Tifany Yung and
+               Darko Marinov},
+  title     = {DeFlaker: automatically detecting flaky tests},
+  booktitle = {Proceedings of the 40th International Conference on Software Engineering,
+               {ICSE} 2018, Gothenburg, Sweden, May 27 - June 03, 2018},
+  pages     = {433--444},
+  abbr      = {ICSE},
+  year      = {2018},
+  url       = {http://www.cs.cmu.edu/~mhilton/docs/icse18-deflaker.pdf},
+  doi       = {10.1145/3180155.3180164},
+  timestamp = {Mon, 26 Nov 2018 12:14:46 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/icse/BellLHEYM18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/popl/OmarVHAH17,
+  author    = {Cyrus Omar and
+               Ian Voysey and
+               Michael Hilton and
+               Jonathan Aldrich and
+               Matthew A. Hammer},
+  title     = {Hazelnut: a bidirectionally typed structure editor calculus},
+  booktitle = {Proceedings of the 44th {ACM} {SIGPLAN} Symposium on Principles of
+               Programming Languages, {POPL} 2017, Paris, France, January 18-20,
+               2017},
+  abbr      = {POPL},
+  pages     = {86--99},
+  year      = {2017},
+  url       = {https://arxiv.org/abs/1607.04180},
+  timestamp = {Wed, 28 Dec 2016 13:22:29 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/popl/OmarVHAH17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sigsoft/Hilton0TMD17,
+  author    = {Michael Hilton and
+               Nicholas Nelson and
+               Timothy Tunnell and
+               Darko Marinov and
+               Danny Dig},
+  title     = {Trade-offs in continuous integration: assurance, security, and flexibility},
+  booktitle = {Proceedings of the 2017 11th Joint Meeting on Foundations of Software
+               Engineering, {ESEC/FSE} 2017, Paderborn, Germany, September 4-8, 2017},
+  abbr      = {ESEC/FSE},
+  pages     = {197--207},
+  year      = {2017},
+  url       = {http://www.cs.cmu.edu/~mhilton/docs/Hilton_CI_Tradeoffs.pdf},
+  doi       = {10.1145/3106237.3106270},
+  timestamp = {Wed, 16 Aug 2017 08:10:24 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/sigsoft/Hilton0TMD17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{nguyen2016api,
+  title={API code recommendation using statistical learning from fine-grained changes},
+  author={Nguyen, Anh Tuan and Hilton, Michael and Codoban, Mihai and Nguyen, Hoan Anh and Mast, Lily and Rademacher, Eli and Nguyen, Tien N and Dig, Danny},
+  booktitle={Proceedings of the 2016 24th ACM SIGSOFT International Symposium on Foundations of Software Engineering. FSE 2016},
+   year = {2016},
+  abbr      = {FSE},
+  month = {2},
+  Url={http://www.cs.cmu.edu/~mhilton/publications/2016/APIRec_fse16.pdf}
+  }
+
+
+
+@inproceedings{xHiltonASE,
+  author    = {Michael Hilton and
+               Timothy Tunnell and
+               Kai Huang and
+               Darko Marinov and
+               Danny Dig},
+  title     = {Usage, costs, and benefits of continuous integration in open-source
+               projects},
+  booktitle = {Proceedings of the 31st {IEEE/ACM} International Conference on Automated
+               Software Engineering. {ASE} 2016},
+   year = {2016},
+  abbr      = {ASE},
+  month = {1},
+  URL={http://cope.eecs.oregonstate.edu/papers/OpenSourceCIUsage.pdf}
+
+
+}
+
+
+@inproceedings{TDDViz:Hilton,
+  author    = {Michael Hilton and Nicholas Nelson and Hugh McDonald and Sean McDonald and Ron Metoyer and Danny Dig},
+  title     = {TDDViz: Using Software Changes to Understand Conformance to Test Driven Development},
+  publisher = {Proceedings of Agile Processes, in Software Engineering, and Extreme Programming: 17th International Conference. {XP} 2016},
+  year      = 2016,
+  abbr      = {XP2016},
+  Url={http://www.cs.cmu.edu/~mhilton/publications/2016/TDDViz.pdf}
+}
+
+
+
+
+@inproceedings{hilton2014refactoring,
+  title={Refactoring local to cloud data types for mobile apps},
+  author={Hilton, Michael and Christi, Arpit and Dig, Danny and Moskal, Micha{\l} and Burckhardt, Sebastian and Tillmann, Nikolai},
+  booktitle={Proceedings of the 1st International Conference on Mobile Software Engineering and Systems. {MOBILESoft 2014}},
+  year={2014},
+  abbr      = {MOBILESoft},
+  Url={http://cope.eecs.oregonstate.edu/papers/RefactorToCloud.pdf}
+  }
+
+
+@inproceedings{janzen2013evaluation,
+  title={An evaluation of interactive test-driven labs with WebIDE in CS0},
+  author={Janzen, David S and Clements, John and Hilton, Michael},
+  booktitle={Proceedings of the 2013 International Conference on Software Engineering. {ICSE 2013}},
+  year={2013},
+  abbr      = {ICSE Software Engineering Education},
+    Url = {http://dl.acm.org/citation.cfm?id=2486788.2486938&coll=DL&dl=GUIDE}
+}
+
+
+@inproceedings{hilton2012teaching,
+  title={On teaching arrays with test-driven learning in WebIDE},
+  author={Hilton, Michael and Janzen, David S},
+  booktitle={Proceedings of the 17th ACM annual conference on Innovation and technology in computer science education. {ITiCSE 2012}},
+  year={2012},
+  abbr      = {ITiCSE},
+  Url = {http://dl.acm.org/citation.cfm?id=2325296.2325322&coll=DL&dl=GUIDE}
 }
